--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
 <ul class="nav pull-right">
   <li><%= link_to "Home",         root_path %></li>  
   <li><%= link_to "Admin",        new_admin_session_path %></li>
+  <li><%= link_to "Sign Up",      new_user_registration_path %></li>
   <% if user_signed_in? %>
     <li id="fat-menu" class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
