--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -12,4 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ * app/assets/stylesheets/application.css.sass
  */
+
+@import "bootstrap-sprockets"
+@import "bootstrap"
