--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,7 @@
+<ul class="nav nav-tabs">
+  <%= render 'layouts/header' %>
+</ul>
+<%= render 'layouts/messages' %>
 <h1>Users#index</h1>
 <p>Find me in app/views/users/index.html.erb</p>
 
