Bootstrap is working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
-<%= render 'layouts/header' %>
-<%= render 'layouts/messages' %>
-<h1>This is the main splash page!!!</h1>
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>This is the main splash page!!!</h1>
+  </div>
+</div>
