--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,5 @@
+<h1>This is the main splash page!!!</h1>
 
-<div class="container">
-  <div class="jumbotron">
-    <h1>This is the main splash page!!!</h1>
-  </div>
-</div>
+<div class="home"> Hopefully this is placed beneath the current border container. </div>
+  
+
