Working on creating associations between tables

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
-<h1>This is the main splash page!!!</h1>
+<div>
+  <h1>This is the main splash page!!!</h1>
 
-<div class="home"> Hopefully this is placed beneath the current border container. </div>
-  
+  <div class="home"> Hopefully this is placed beneath the current border container. </div>
+</div>
 
