--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,7 @@ div {
 .home {
   border: 2px solid;
   border-radius: 5px;
+  border-color: cyan;
   width: 350px;
   height: 150px;
   box-shadow: 10px 10px 10px #888888;
