--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,9 +12,13 @@
           <li><%= link_to "Profile", edit_user_registration_path %></li>
           <li><%= link_to "Settings", '#' %></li>
           <li class="divider"></li>
+          <% if current_user.try(:admin?) %>
+          <li><% link_to "Admin Logout", destroy_admin_session_path, :method => :delete %></li>
+          <% else %>
           <li>
             <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
           </li>
+          <% end %>                    
         </ul>
       </li>
       <li> <%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
