--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
-<ul class="nav nav-tabs">
-  <%= render 'layouts/header' %>
-</ul>
-<%= render 'layouts/messages' %>
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div>
+  <%= render 'layouts/messages' %>
+  <h1>Users#index</h1>
+  <p>Find me in app/views/users/index.html.erb</p>
 
-
-<% @users.each do |person| %>
-  <%= person.username %><br />
-  <%= person.email %><br />
-<% end %>
+  <% @users.each do |person| %>
+    <%= person.id %><br />
+    <%= person.username %><br />
+    <%= person.email %><br />
+    <%= person.admin %><br /><br />
+  <% end %>
+</div>
